--- a/Capstone/server/package.json
+++ b/Capstone/server/package.json
@@ -9,9 +9,12 @@
   "author": "HeroVired",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1478.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   }
 }
