--- a/Capstone/server/package.json
+++ b/Capstone/server/package.json
@@ -1,14 +1,17 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Backend for AWS Dashboard",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "HeroVired",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1481.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
