--- a/Capstone/server/package.json
+++ b/Capstone/server/package.json
@@ -9,6 +9,7 @@
   "author": "HeroVired",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1488.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
